--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@cloudinary/angular-5.x": "^1.0.3",
+    "cloudinary-core": "^2.7.4",
     "core-js": "^3.2.1",
+    "ng2-file-upload": "^1.3.0",
     "ngx-mask": "^8.0.3",
     "ngx-toastr": "^10.0.4",
     "rxjs": "~6.5.2",
