--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.4",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.4",
     "@angular/compiler": "~8.2.4",
     "@angular/core": "~8.2.4",
     "@angular/forms": "~8.2.4",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
     "@cloudinary/angular-5.x": "^1.0.3",
     "cloudinary-core": "^2.7.4",
     "core-js": "^3.2.1",
+    "hammerjs": "^2.0.8",
     "ng2-file-upload": "^1.3.0",
     "ngx-mask": "^8.0.3",
     "ngx-toastr": "^10.0.4",
