--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ng2-file-upload": "^1.3.0",
     "ngx-mask": "^8.0.3",
     "ngx-toastr": "^10.0.4",
+    "node-sass": "^4.13.0",
     "rxjs": "~6.5.2",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -51,6 +52,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~8.3.0",
     "tslint": "~5.19.0",
-    "typescript": "^3.4.5"
+    "typescript": "^3.4.5",
+    "webpack": "^4.41.2"
   }
 }
